# melanoma-detection

./: .gitignore  README.md  import-summary.txt
ListActivityTest/res/layout/: activity_main.xml  activity_menu.xml  activity_open_cvcamera.xml
ListActivityTest/res/menu/: main.xml  menu.xml
ListActivityTest/res/values/: strings.xml
MoleDetection/: .classpath  .cproject  .project  AndroidManifest.xml  project.properties
MoleDetection/jni/: Android.mk  ac_withoutedges_yuv.cpp  jni_part.cpp
MoleDetection/res/layout/: activity_get_previous_pictures.xml  activity_home.xml  activity_image.xml  activity_list.xml  activity_main.xml  activity_open_cvcamera.xml  activity_process_image.xml
MoleDetection/res/layout-v21/: activity_open_cvcamera.xml
MoleDetection/res/menu/: image.xml  main.xml  main_activity2.xml  my_list.xml
MoleDetection/res/values/: strings.xml
MoleDetection/src/jniLibs/: Android.mk  ac_withoutedges_yuv.hpp  activecontour.hpp  linked_list.cpp
OpenCV Library - 2.4.10/: .classpath
SkinCancerDetection/: .classpath  .project  project.properties
SkinCancerDetection/res/layout/: activity_contact_us.xml  activity_menu.xml  activity_open_cvcamera.xml  activity_process_image.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/ukalwa/moledetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: opencv_svm.xml
app/src/main/cpp/: Android.mk  Application.mk  activecontour.cpp  jni_part.cpp  linked_list.hpp
app/src/main/java/ukalwa/moledetection/: ActiveContourDetection.java  ColorBlobDetectionActivity.java  ColorBlobDetector.java  ColorDetection.java  ContactUs.java  CustomCameraView.java  GetPreviousPictures.java  Home.java  ImageActivity.java  MainActivity.java  MyListActivity.java  OpenCVCamera.java  ProcessImage.java
app/src/main/res/drawable/: buttonshape.xml  camerabutton.xml  nextbutton.xml
app/src/main/res/layout/: activity_contact_us.xml  activity_get_previous_pictures.xml  activity_home.xml  activity_image.xml  activity_list.xml  activity_main.xml  activity_menu.xml  activity_open_cvcamera.xml  activity_process_image.xml  galleryitem.xml
app/src/main/res/layout-land/: activity_open_cvcamera.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/ukalwa/moledetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary2410/: build.gradle
(+35 files in other folders)
